# Australis-Avionics-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  compose.yaml
Australis-Avionics/: .clang-format  .clangd  CMakeLists.txt  toolchain.cmake
Australis-Avionics/Code/core/inc/: dataframe.h  main.h
Australis-Avionics/Code/core/inc/rtos/: FreeRTOSConfig.h  flashwrite.h  stateupdate.h
Australis-Avionics/Code/core/inc/shell/: shell.h
Australis-Avionics/Code/core/src/: devicelist.c  main.c  tasklist.c
Australis-Avionics/Code/core/src/rtos/: flashwrite.c  stateupdate.c
Australis-Avionics/Code/core/src/shell/: baro.c  help.c  launch.c  mem.c  shell.c
Australis-Avionics/Code/extra/src/rtos/: heartbeat.c
Australis-Avionics/Code/system/: startup_stm32f4xx.s  stm32_flash.ld
Australis-Avionics/Core/Inc/: devicelist.h  devices.h  drivers.h  gpio.h  main.h  params.h  tasklist.h
Australis-Avionics/Core/Inc/CAN/: can.h
Australis-Avionics/Core/Inc/RTOS/: groups.h
Australis-Avionics/Core/Inc/SPI/: spi.h
Australis-Avionics/Core/Inc/SPI/flash/: flash.h
Australis-Avionics/Core/Inc/SPI/sensors/: sensors.h
Australis-Avionics/Core/Inc/UART/GPS/: gps.h
Australis-Avionics/Core/Inc/UART/USB/: shell.h
Australis-Avionics/Core/Inc/drivers/peripheral/: gpiopin.h  spi.h
Australis-Avionics/Core/Inc/rtos/: handles.h
Australis-Avionics/Core/Inc/rtos/tasks/: stateUpdate.h  stateupdate.h
Australis-Avionics/Core/Inc/shell/: baro.h  help.h  launch.h  mem.h  shell.h
Australis-Avionics/Core/Inc/spi/: spi.h
Australis-Avionics/Core/Inc/spi/flash/: flash.h
Australis-Avionics/Core/Inc/spi/lora/: lora.h
Australis-Avionics/Core/Inc/spi/sensors/: sensors.h
Australis-Avionics/Core/Inc/uart/: uart.h
Australis-Avionics/Core/Inc/uart/gps/: gps.h
Australis-Avionics/Core/Inc/uart/usb/: shell.h
Australis-Avionics/Core/Src/: devicelist.c  devices.c  drivers.c  main.c  packets.c
Australis-Avionics/Core/Src/CAN/: can.c
Australis-Avionics/Core/Src/RTOS/: freertos.c
Australis-Avionics/Core/Src/SPI/: spi.c
Australis-Avionics/Core/Src/SPI/flash/: flash.c
Australis-Avionics/Core/Src/SPI/lora/: lora.c
Australis-Avionics/Core/Src/UART/: uart.c
Australis-Avionics/Core/Src/UART/USB/: shell.c
Australis-Avionics/Core/Src/drivers/peripheral/: gpiopin.c  spi.c
Australis-Avionics/Core/Src/rtos/tasks/: stateUpdate.c  stateupdate.c
Australis-Avionics/Core/Src/shell/: baro.c  launch.c  mem.c
Australis-Avionics/Core/Src/spi/flash/: flash.c  w25q128.c
Australis-Avionics/Core/Src/spi/lora/: lora.c
Australis-Avionics/Core/Src/spi/sensors/: sensors.c
Australis-Avionics/Core/Src/uart/: uart.c
Australis-Avionics/Core/Src/uart/GPS/: gps.c
Australis-Avionics/Core/Src/uart/gps/: gps.c
Australis-Avionics/Core/Src/uart/usb/: shell.c
Australis-Avionics/Data/: gyroY.h  gyroZ
Australis-Avionics/Lib/: README.txt
Australis-Avionics/MDK-ARM/: AV1_instructions.txt  Australis-Avionics.uvprojx  JLinkSettings.JLinkScript  include.py
Australis-Avionics/MDK-ARM/System/: config.h  startup_stm32f439xx.s  system_stm32f4xx.c
Australis-Avionics/Test/dummy/data/accel/: accelX  accelX.h  accelY.h  accelZ.c
Australis-Avionics/Test/dummy/data/baro/: press  press.h
Australis-Avionics/Test/dummy/data/gyro/: gyroY.c  gyroZ.c
australis/firmware/: CMakeLists.txt
australis/firmware/components/: CMakeLists.txt
australis/firmware/components/core/: CMakeLists.txt  core.ld
australis/firmware/components/core/_inc/: _topic.h
australis/firmware/components/core/inc/: AustralisCore.h  FreeRTOSConfig.h  devicelist.h  packet.h  topic.h
australis/firmware/components/core/src/: AustralisCore.c  devicelist.c  tasklist.c  topic.c
australis/firmware/components/extra/sequencer/: CMakeLists.txt
australis/firmware/components/extra/synthesiser/: CMakeLists.txt
australis/firmware/components/system/: CMakeLists.txt  startup_stm32f439xx.s.patch  system_stm32f4xx.c.patch
australis/firmware/components/system/inc/: config.h  system.h
australis/firmware/shell/debug/: CMakeLists.txt
australis/firmware/shell/debug/src/: debug_gyroscope.c  debug_launch.c  debug_state.c
australis/firmware/shell/test/dummy/: convert_data.bat
australis/firmware/shell/test/lora/: CMakeLists.txt
australis/firmware/targets/AV2-demo/master/: CMakeLists.txt
australis/firmware/targets/AV2-demo/supervisor/: CMakeLists.txt
australis/firmware/targets/AV2-dual/: CMakeLists.txt
australis/firmware/targets/AV2-dual/master/: CMakeLists.txt
australis/firmware/targets/AV2-dual/supervisor/: CMakeLists.txt
australis/firmware/targets/PublicationTest/: CMakeLists.txt
australis/firmware/targets/PublicationTest/config/: AustralisConfig.h
australis/firmware/targets/PublicationTest/src/: main.c
cmake/: GitVersion.cmake  factory.cmake
firmware/: .clang-format  CMakeLists.txt  README.md  toolchain.cmake
firmware/australis/: CMakeLists.txt
firmware/australis/debug/: CMakeLists.txt
firmware/australis/debug/src/: debug_accelerometer.c  debug_adcvsense.c  debug_barometer.c  debug_sx1272.c  debug_task.c
firmware/australis/lib/: README.md
firmware/australis/middlewares/: README.txt
firmware/australis/source/core/: CMakeLists.txt
firmware/australis/source/core/inc/: AustralisCore.h  tasklist.h
firmware/australis/source/core/src/: AustralisCore.c  state.c
firmware/australis/source/extra/: CMakeLists.txt
firmware/australis/source/system/: CMakeLists.txt
firmware/australis/sources/: FreeRTOSConfig.h
firmware/australis/sources/core/: CMakeLists.txt  core.ld
firmware/australis/sources/core/inc/: dataframe.h  state.h  tasklist.h  topic.h
firmware/australis/sources/core/src/: AustralisCore.c  packet.c  state.c  stubs.c  tasklist.c  topic.c
firmware/australis/sources/extra/: CMakeLists.txt
firmware/australis/sources/extra/inc/: packets.h
firmware/australis/sources/system/: CMakeLists.txt  stm32_flash.ld
firmware/australis/sources/system/src/: system_stm32f4xx.c
firmware/australis/test/: CMakeLists.txt
firmware/australis/test/dummy/: CMakeLists.txt
(+1579 files in other folders)
